src/test/resources/scripts/language/parser/invalid/coercion/arithmetic/subFirst.sbsc
"hello" - 0;

return false;